[gd_scene load_steps=11 format=3 uid="uid://ck8gihsb4xmra"]

[ext_resource type="Script" path="res://Scripts/grid.gd" id="1_h3gx1"]
[ext_resource type="Script" path="res://Scripts/main.gd" id="1_kgnao"]
[ext_resource type="Script" path="res://Scripts/snake.gd" id="2_cobhu"]
[ext_resource type="Script" path="res://Scripts/food_spawner.gd" id="4_t6f1d"]
[ext_resource type="PackedScene" uid="uid://dhgwnsgolkoom" path="res://World/hud.tscn" id="5_0lybr"]
[ext_resource type="AudioStream" uid="uid://cw5o5qvke1tol" path="res://Music/NeverEndingRace.ogg" id="6_7j1kl"]

[sub_resource type="Animation" id="Animation_tiet8"]
resource_name = "fade_in"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-60.528, -20.829]
}

[sub_resource type="Animation" id="Animation_nm1ul"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-60.528]
}

[sub_resource type="Animation" id="Animation_52wy5"]
resource_name = "fade_out"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-20.829, -60.528]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iao4e"]
_data = {
"RESET": SubResource("Animation_nm1ul"),
"fade_in": SubResource("Animation_tiet8"),
"fade_out": SubResource("Animation_52wy5")
}

[node name="main" type="Node2D"]
script = ExtResource("1_kgnao")

[node name="grid" type="Node2D" parent="."]
script = ExtResource("1_h3gx1")

[node name="snake" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("2_cobhu")

[node name="spawner_food" type="Node2D" parent="."]
script = ExtResource("4_t6f1d")

[node name="HUD" parent="." instance=ExtResource("5_0lybr")]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_7j1kl")
volume_db = -60.528

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_iao4e")
}

[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
